--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,8 @@ foreach(_script ${TEXT1_SCRIPTS})
 endforeach()
 
 #复制data文件夹
-file(GLOB datas ${PROJECT_SOURCE_DIR}/data/*.dat)
-file(GLOB datas ${PROJECT_SOURCE_DIR}/data/*.C)
+file(GLOB datas ${PROJECT_SOURCE_DIR}/data/*.dat ${PROJECT_SOURCE_DIR}/data/*.C)
+#file(GLOB datas ${PROJECT_SOURCE_DIR}/data/*.C)
 #file(MAKE_DIRECTORY [directory1 directory2 ...])
 file(COPY ${datas} DESTINATION ${PROJECT_BINARY_DIR}/data)
 
